FIx style on dark mode

--- a/app/assets/v2/css/town_square.css
+++ b/app/assets/v2/css/town_square.css
@@ -1219,6 +1219,7 @@ body.green.offer_view .announce {
 .activity.hackathon_new_hacker {
   position: relative;
   box-sizing: border-box;
+  z-index: 2;
 }
 
 .activity.hackathon_new_hacker:before {
@@ -1232,23 +1233,38 @@ body.green.offer_view .announce {
   background: linear-gradient(to right, #B572D4 0%, #F9DD5B 37%, #75EDB5 100%);
 }
 
-.activity.hackathon_new_hacker {
-  z-index: 2;
-}
 .activity.hackathon_new_hacker:after {
-    content: '';
-    position: absolute;
-    top: 58px;
-    left: 3%;
-    height: 143px;
-    width: 94%;
-    display: block;
-    background: rgb(211, 250, 235);
-    z-index: -1;
+  content: '';
+  position: absolute;
+  top: 58px;
+  left: 3%;
+  height: 143px;
+  width: 94%;
+  display: block;
+  background: --var(--gc-light-green);
+  z-index: -2;
 }
 
-.activity.hackathon_new_hacker .avatar:before {
+.activity.hackathon_new_hacker .activity-avatar::after {
+  height: 6.1rem;
+  content: '';
+  background-image: url(/static/v2/images/townsquare-nh.svg);
+  width: 6.1rem;
+  position: absolute;
+  top: -24px;
+  left: 8px;
+  z-index: -1;
+}
 
+.activity.hackathon_new_hacker .activity_detail::after {
+  height: 100%;
+  content: '';
+  background: url(/static/v2/images/townsqure-party.png) 0 0 no-repeat;
+  width: 100%;
+  position: absolute;
+  top: 55px;
+  right: -309px;
+  z-index: -1;
 }
 
 .new_hackathon_project {
